[project]
name = "sudanbi-db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    #    "mysql>=0.0.3",
    #    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pymysql>=1.1.2",
    "spacy>=3.8.14",
]
